Fix footer margin on mobile screen

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -81,7 +81,7 @@ footer .icon {
     border: 2px solid var(--soft-magenta);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
     body {
         background-image: url(./images/bg-mobile.svg);
         overflow-y: scroll;
@@ -134,16 +134,10 @@ footer .icon {
         width: 200px;
         margin: 1rem auto;
     }
-
+    
     footer {
         padding: 0;
         justify-content: center;
-        margin-top: 13rem;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    footer {
-        margin-top: 100rem;
+        margin-top: 300px;
     }
 }
